syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.dataflow.commons";
option java_outer_classname = "VoidProto";

message VoidGrpcResponse {}